--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,7 +35,7 @@ http {
     add_header X-Frame-Options DENY;
 
     server {
-        listen 80 ;
+        listen 80 default_server;
         listen [::]:80 ;
         server_name _;
 
