--- a/nginx/vhosts.d/pkg-test.conf
+++ b/nginx/vhosts.d/pkg-test.conf
@@ -26,7 +26,7 @@ server {
 
       location / {
         sendfile off;
-        proxy_pass         http://oijenkins;
+        proxy_pass         http://oibuild;
         proxy_redirect     default;
         proxy_http_version 1.1;
 
