--- a/nginx/vhosts.d/pkg.conf
+++ b/nginx/vhosts.d/pkg.conf
@@ -39,6 +39,7 @@ server {
       proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
       proxy_redirect off;
       proxy_buffering off;
-	
-      proxy_pass http://oirepo/$uri;
+      location / {	
+      	proxy_pass http://oirepo/$uri;
+      }
 }
