fixup proxy config

--- a/nginx/vhosts.d/pkg.conf
+++ b/nginx/vhosts.d/pkg.conf
@@ -40,6 +40,6 @@ server {
       proxy_redirect off;
       proxy_buffering off;
       location / {	
-      	proxy_pass http://oirepo/$uri;
+      	proxy_pass http://oirepo$uri;
       }
 }
