Set dlc root dir

--- a/nginx/vhosts.d/dlc.conf
+++ b/nginx/vhosts.d/dlc.conf
@@ -5,6 +5,8 @@ server {
       ssl_certificate      /etc/dehydrated/certs/dlc.openindiana.aurora-opencloud.org/fullchain.pem;
       ssl_certificate_key  /etc/dehydrated/certs/dlc.openindiana.aurora-opencloud.org/privkey.pem;
 
+      root /var/www/dlc;
+
       location ^~ /.well-known/acme-challenge {
           allow all;
           alias /var/www/dehydrated;
