Enable prebuilt website
Signed-off-by: Till Wegmueller <toasterson@gmail.com>

--- a/nginx/vhosts.d/website.conf
+++ b/nginx/vhosts.d/website.conf
@@ -12,7 +12,7 @@ server {
       }
 
       location / {
-          root   /var/www/openindiana.org/;
+          root   /var/www/openindiana.org/dist;
           index  index.html index.htm;
       }
 
