--- a/nginx/vhosts.d/website.conf
+++ b/nginx/vhosts.d/website.conf
@@ -1,7 +1,7 @@
 server {
       listen       443 ssl;
       server_name  openindiana.org;
-      server_alias www.openindiana.org;
+      alias www.openindiana.org;
 
       ssl_certificate      /etc/dehydrated/certs/openindiana.org/fullchain.pem;
       ssl_certificate_key  /etc/dehydrated/certs/openindiana.org/privkey.pem;
