Fix IPV6 listening, Add dlc.openindiana.org
Signed-off-by: Till Wegmueller <toasterson@gmail.com>

--- a/nginx/vhosts.d/dlc.openindiana.conf
+++ b/nginx/vhosts.d/dlc.openindiana.conf
@@ -1,12 +1,12 @@
 server {
       listen       443 ssl;
       listen       [::]:443 ssl;
-      server_name  dlc.openindiana.aurora-opencloud.org;
+      server_name  dlc.openindiana.org;
 
-      ssl_certificate      /etc/dehydrated/certs/dlc.openindiana.aurora-opencloud.org/fullchain.pem;
-      ssl_certificate_key  /etc/dehydrated/certs/dlc.openindiana.aurora-opencloud.org/privkey.pem;
+      ssl_certificate      /etc/dehydrated/certs/dlc.openindiana.org/fullchain.pem;
+      ssl_certificate_key  /etc/dehydrated/certs/dlc.openindiana.org/privkey.pem;
 
-      root /var/www/dlc;
+      root /var/www/dlc/hipster;
 
       location ^~ /.well-known/acme-challenge {
           allow all;
