--- a/nginx/vhosts.d/main_server.conf
+++ b/nginx/vhosts.d/main_server.conf
@@ -1,5 +1,6 @@
 server {
       listen       443 ssl;
+      listen       [::]:443 ssl;
       server_name  openindiana.aurora-opencloud.org;
 
       ssl_certificate      /etc/dehydrated/certs/openindiana.aurora-opencloud.org/fullchain.pem;
