--- a/nginx/vhosts.d/website.conf
+++ b/nginx/vhosts.d/website.conf
@@ -19,4 +19,14 @@ server {
           proxy_set_header Host $host;
           proxy_pass https://95.131.249.92/mailman;  
       }
+
+      location /pipermail {
+          proxy_set_header Host $host;
+          proxy_pass https://95.131.249.92/pipermail;
+      }
+
+      location /icons {
+          proxy_set_header Host $host;
+          proxy_pass https://95.131.249.92/icons;
+      }
   }
