--- a/nginx/vhosts.d/jenkins.conf
+++ b/nginx/vhosts.d/jenkins.conf
@@ -11,6 +11,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
       listen       443 ssl;
+      listen       [::]:443 ssl;
       server_name  jenkins.openindiana.aurora-opencloud.org;
 
       ssl_certificate      /etc/dehydrated/certs/jenkins.openindiana.aurora-opencloud.org/fullchain.pem;
