--- a/nginx/vhosts.d/pkg.conf
+++ b/nginx/vhosts.d/pkg.conf
@@ -5,6 +5,7 @@ upstream oirepo {
 
 server {
       listen       443 ssl;
+      listen       [::]:443 ssl;
       server_name  pkg.openindiana.aurora-opencloud.org;
 
       ssl_certificate      /etc/dehydrated/certs/pkg.openindiana.aurora-opencloud.org/fullchain.pem;
