--- a/nginx/vhosts.d/pkg.solarm.org.conf
+++ b/nginx/vhosts.d/pkg.solarm.org.conf
@@ -1,5 +1,6 @@
 server {
       listen       443 ssl;
+      listen      [::]:443 ssl;
       server_name  pkg.solarm.org;
 
       ssl_certificate      /etc/dehydrated/certs/pkg.solarm.org/fullchain.pem;
