--- a/nginx/vhosts.d/jenkins-new.conf
+++ b/nginx/vhosts.d/jenkins-new.conf
@@ -12,7 +12,7 @@ map $http_upgrade $connection_upgrade {
 server {
       listen       443 ssl;
       listen       [::]:443 ssl;
-      server_name  jenkins.openindiana.aurora-opencloud.org;
+      server_name  jenkins-new.openindiana.aurora-opencloud.org;
 
       ssl_certificate      /etc/dehydrated/certs/jenkins-new.openindiana.aurora-opencloud.org/fullchain.pem;
       ssl_certificate_key  /etc/dehydrated/certs/jenkins-new.openindiana.aurora-opencloud.org/privkey.pem;
