--- a/nginx/vhosts.d/jenkins-new.conf
+++ b/nginx/vhosts.d/jenkins-new.conf
@@ -38,6 +38,8 @@ server {
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host  $host;
+        proxy_set_header   X-Forwarded-Port  443;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_max_temp_file_size 0;
 
