--- a/nginx/vhosts.d/hipster.openindiana.org.conf
+++ b/nginx/vhosts.d/hipster.openindiana.org.conf
@@ -1,3 +1,13 @@
+upstream oijenkins-new {
+  keepalive 32; # keepalive connections
+  server 10.1.0.70:8080; # jenkins ip and port
+}
+
+upstream oijenkins-logs {
+  keepalive 32; # keepalive connections
+  server 10.1.0.70:80; # jenkins ip and port
+}
+
 # Required for Jenkins websocket agents
 map $http_upgrade $connection_upgrade {
   default upgrade;
@@ -7,10 +17,10 @@ map $http_upgrade $connection_upgrade {
 server {
       listen       443 ssl;
       listen       [::]:443 ssl;
-      server_name  jenkins-new.openindiana.aurora-opencloud.org;
+      server_name  hipster.openindiana.org
 
-      ssl_certificate      /etc/dehydrated/certs/jenkins-new.openindiana.aurora-opencloud.org/fullchain.pem;
-      ssl_certificate_key  /etc/dehydrated/certs/jenkins-new.openindiana.aurora-opencloud.org/privkey.pem;
+      ssl_certificate      /etc/dehydrated/certs/hipster.openindiana.org/fullchain.pem;
+      ssl_certificate_key  /etc/dehydrated/certs/hipster.openindiana.org/privkey.pem;
       
       location ^~ /.well-known/acme-challenge {
           allow all;
@@ -21,6 +31,16 @@ server {
       ignore_invalid_headers off;
 
       location / {
+         root /opt/config/landingpages/hipster;
+         autoindex on;
+      }
+
+      location ^~ /logs {
+         proxy_pass       http://oijenkins-logs;
+         proxy_redirect   default;
+      }
+
+      location ^~ /jenkins {
         sendfile off;
         proxy_pass         http://oijenkins-new;
         proxy_redirect     default;
