--- a/nginx/vhosts.d/hipster.openindiana.org.conf
+++ b/nginx/vhosts.d/hipster.openindiana.org.conf
@@ -17,7 +17,7 @@ map $http_upgrade $connection_upgrade {
 server {
       listen       443 ssl;
       listen       [::]:443 ssl;
-      server_name  hipster.openindiana.org
+      server_name  hipster.openindiana.org;
 
       ssl_certificate      /etc/dehydrated/certs/hipster.openindiana.org/fullchain.pem;
       ssl_certificate_key  /etc/dehydrated/certs/hipster.openindiana.org/privkey.pem;
