--- a/nginx/vhosts.d/pkg.conf
+++ b/nginx/vhosts.d/pkg.conf
@@ -41,6 +41,6 @@ server {
       proxy_redirect off;
       proxy_buffering off;
       location / {	
-      	proxy_pass http://oirepo$uri;
+      	proxy_pass http://oirepo;
       }
 }
