--- a/nginx/vhosts.d/pkg.solarm.org.conf
+++ b/nginx/vhosts.d/pkg.solarm.org.conf
@@ -36,6 +36,6 @@ server {
       proxy_redirect off;
       proxy_buffering off;
       location / {	
-      	proxy_pass http://oirepo$uri;
+      	proxy_pass http://oirepo;
       }
 }
