No google dont index dlc
Signed-off-by: Till Wegmueller <toasterson@gmail.com>

--- a/nginx/vhosts.d/dlc.openindiana.conf
+++ b/nginx/vhosts.d/dlc.openindiana.conf
@@ -6,6 +6,8 @@ server {
       ssl_certificate      /etc/dehydrated/certs/dlc.openindiana.org/fullchain.pem;
       ssl_certificate_key  /etc/dehydrated/certs/dlc.openindiana.org/privkey.pem;
 
+      add_header X-Robots-Tag "noindex";
+
       root /var/www/dlc/hipster;
 
       location ^~ /.well-known/acme-challenge {
